@@ -1,3 +1,8 @@
+2006-12-09  Saso Kiselkov <skiselkov@gmail.com>
+
+    * Subprojects/AboutEtoileEntry/ETMachineInfo.m: Added CPU name formatting
+      rules to strip unneeded whitespace.
+
 2006-12-04  Saso Kiselkov <skiselkov@gmail.com>
 
     * GNUmakefile.postamble: Added forgotten ".app" suffix in last post-build
